# lab3

./: CMakeLists.txt
lab_3/benchmark/: benchmark.cpp
lab_3/cmake/: VisualStudio.cmake
lab_3/source/: authors.h  cpu_reduction.cpp  cpu_reduction.h  gpu_LIN_upscaling.cu  gpu_LIN_upscaling.h  gpu_NN_upscaling.cu  gpu_downsampling.cu  gpu_matrix_convolution.cu  gpu_memory_management.cu  gpu_reductions.cu  gpu_reductions.h  gpu_utilities.cu  gpu_utilities.h  grayscale_image.cpp  intermediate_image.cpp  intermediate_image.cu
lab_3/source/io/: image_parser.cpp
